Fixing layout spacing issues

--- a/src/components/movies-list/movies-list.scss
+++ b/src/components/movies-list/movies-list.scss
@@ -9,3 +9,9 @@
 .movie-list-container {
   max-width: 1400px !important;
 }
+
+.movies-list-spacer {
+  display: block;
+  content: "";
+  margin-top: 75px;
+}
